# hardwater

./: CMakeLists.txt  README.md  app.cpp
include/: chunk.hpp  encrypted_ion_key.hpp  file_chunk.hpp  fragment_hash.hpp  ion.hpp  ion_key.hpp  key.hpp  mapped_file.hpp  solution.hpp  util.hpp
src/: chunk.cpp  encrypted_ion_key.cpp  file_chunk.cpp  fragment_hash.cpp  ion.cpp  ion_key.cpp  key.cpp  mapped_file.cpp  solution.cpp  util.cpp
test_files/keys/: generic.pem  generic_public.pem
test_files/text/: short_snippet.txt
test_include/: key_helpers.hpp
test_srcs/: encrypted_ion_key_test.cpp  ion_key_test.cpp  ion_test.cpp  key_helpers.cpp  key_test.cpp  main.cpp
